force-app/main/default/objects/Anomaly_Audit__c/Anomaly_Audit__c.object-meta.xml
<CustomObject>
    <description>Audit + idempotency record for every Device_Anomaly__e processed by the Triage Agent.</description>
    <label>Anomaly Audit</label>
    <nameField>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Anomaly Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>