force-app/main/default/objects/Anomaly_Audit__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Anomaly Audits</relationshipLabel>
    <relationshipName>Anomaly_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>