force-app/main/default/objects/Anomaly_Audit__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Anomaly Audits</relationshipLabel>
    <relationshipName>Anomaly_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>