force-app/main/default/objects/Anomaly_Audit__c/fields/Trace_JSON__c.field-meta.xml
<CustomField>
    <fullName>Trace_JSON__c</fullName>
    <label>Trace JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>